force-app/main/default/objects/Bien_Locatif__c/Bien_Locatif__c.object-meta.xml
<CustomObject>
    <label>Bien Locatif</label>
    <nameField>
        <label>Nom du bien</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Biens Locatifs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>