force-app/main/default/objects/Bien_Locatif__c/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <label>Adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>