force-app/main/default/objects/Bien_Locatif__c/fields/Date_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquisition__c</fullName>
    <label>Date d'acquisition</label>
    <type>Date</type>
</CustomField>