force-app/main/default/objects/Bien_Locatif__c/fields/Etage__c.field-meta.xml
<CustomField>
    <fullName>Etage__c</fullName>
    <label>Étage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>