force-app/main/default/objects/Bien_Locatif__c/fields/Nombre_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Pieces__c</fullName>
    <label>Nombre de pièces</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>