force-app/main/default/objects/Bien_Locatif__c/fields/NumeroPretImmo__c.field-meta.xml
<CustomField>
    <fullName>NumeroPretImmo__c</fullName>
    <description>Numéro de contrat du prêt immobilier principal</description>
    <inlineHelpText>Numéro de contrat bancaire du prêt immobilier</inlineHelpText>
    <label>Numéro Prêt Immobilier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>