force-app/main/default/objects/Bien_Locatif__c/fields/NumeroPretTravaux__c.field-meta.xml
<CustomField>
    <fullName>NumeroPretTravaux__c</fullName>
    <description>Numéro de contrat du prêt travaux / passeport crédit</description>
    <inlineHelpText>Numéro de contrat bancaire du prêt travaux</inlineHelpText>
    <label>Numéro Prêt Travaux</label>
    <length>50</length>
    <type>Text</type>
</CustomField>