force-app/main/default/objects/Bien_Locatif__c/fields/Prix_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Prix_Acquisition__c</fullName>
    <label>Prix d&apos;acquisition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>