force-app/main/default/objects/Bien_Locatif__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Statut__c</columns>
    <columns>Type__c</columns>
    <columns>Code_Postal__c</columns>
    <columns>Ville__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>